# rdk-rdm

./: CONTRIBUTING.md  Makefile.am  configure.ac  rdm-manifest.json  rdm-manifest.xml
scripts/: ThirdPartyPackageSigning.sh  appManagerConfigGen.sh  codebigDownload.sh  downloadMgr.sh  downloadUSBPackage.sh  downloadUtils.sh  downloadVersionedApps.sh  getRdmDwldPath.sh  kmsVerify.sh  loggerUtils.sh  opensslVerifier.sh  packagerMgr.sh  rdmBundleMgr.sh  rdmBundleUtils.sh  rdmCatalogueMgr.sh  rdmIarmEvents.sh
src/: Makefile.am  main.c  rdm_rsa_signature_verify.c  rdm_rsa_signature_verify.h
